# solticket

./: .gitignore  Anchor.toml  README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
app/: .gitignore  README.md  next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts
app/src/: helpers.ts
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/app/api/upload-image/: route.ts
app/src/app/create-event/: page.tsx
app/src/app/create-your-event/: page.tsx
app/src/app/createEvent/: page.tsx
app/src/app/discover-events/: page.tsx
app/src/app/event/[id]/: page.tsx
app/src/app/my-tickets/: page.tsx
app/src/components/: Hero.tsx
app/src/components/events/: CreateEventButton.tsx  CreateEventContent.tsx  CreateEventForm.tsx  CreateYourEventContent.tsx  DiscoverEventsContent.tsx  EventCard.tsx  EventCardSkeleton.tsx  EventDetailsContent.tsx  EventsList.tsx  MyEventListing.tsx  MyTicketsContent.tsx
app/src/components/homepage/: Benefits.tsx  Hero.tsx
app/src/components/layout/: Footer.tsx  GlobalLayout.tsx  Logo.tsx  Navbar.tsx  NonAuthContent.tsx
app/src/components/modal/: ModalContent.tsx  ModalContentInner.tsx
app/src/components/ui/: button.tsx
app/src/constants/: program.constant.ts
app/src/context/: program.context.tsx
app/src/schema/: event.schema.ts
app/src/stores/: modal.store.ts
app/src/types/: event.d.ts  idl.d.ts
app/src/utils/: helpers.ts  idl.json  idl_solticket.json  idl_vote.json  program.ts
programs/solticket/: Cargo.toml
programs/solticket/src/: constants.rs  errors.rs  instructions.rs  lib.rs  models.rs  state.rs
programs/solticket/src/instructions/: burn_ticket.rs  create_event.rs  get_user_tickets.rs  mint_ticket.rs  mint_ticket_nft.rs  mod.rs  transfer_ticket.rs  update_event_status.rs  use_ticket.rs
programs/solticket/src/test/: create_event.rs
tests/: solticket.spec.ts  solticket.ts
