[package]
name = "solticket"
version = "0.1.0"
description = "A Solana program for NFT-based event ticketing"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solticket"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.30.0"
anchor-spl = "0.30.0"
solana-program = "1.18.0"
# mpl-token-metadata = "4.0.0"
strum = "0.26"
strum_macros = "0.26"

[dev-dependencies]
anchor-client = "0.30.0"
solana-sdk = "1.18.0"
tokio = { version = "1.14", features = ["full"] }