[package]
name = "solticket"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solticket"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
borsh = "1.5.1"
solana-program = "1.16.27"
strum = "0.26"
strum_macros = "0.26"
mpl-token-metadata = "=2.0.0-beta.1"
