[package]
name = "solticket"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solticket"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]


[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.29.0" }
session-keys = { version = "2.0.3", features = ["no-entrypoint"] }
spl-token-2022 = { version="4.0.1", features = [ "no-entrypoint" ] }
spl-token = { version = "6.0.0", features = [ "no-entrypoint" ] }
spl-token-metadata-interface = { version = "0.4.0"}
strum = "0.26"
strum_macros = "0.26"
spl-type-length-value = "=0.3.0"
rand = "0.7.3"
solana-program = "1.18.19"
